# moniari-log

./: .gitignore  README.md  pyproject.toml  tox.ini
config/: dev.json
src/: config.py
src/moniari_log/: __init__.py  config.py  logger.py
tests/: test_logger.py
